--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </ul>
       </nav>
       <div class="main-head-wrapper">
-        <h1>Hi, I'm a cool Header</h1>
-        <p class="luv">made with Luv</p>
+        <h1>Hi, I'm a Header</h1>
+        <p class="luv">made with ❤️</p>
       </div>
     </header>
     <main class="main-container">
