--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Cards Website</title>
   </head>
 
   <body>
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="down-container">
-        <h2>Schom wieder etwas viereckiges?</h2>
+        <h2>Schon wieder etwas viereckiges?</h2>
         <div class="box-wrapper-down">
           <div class="card-down"></div>
         </div>
@@ -61,7 +61,7 @@
     </main>
     <footer class="footer-container">
       <form class="form-wrapper" action="/action_page.php">
-        <h2>Ein wunderschönes Formular!</h2>
+        <h2>Ein Formular!</h2>
         <br />
         <br />
         <label for="name">Name:</label>
