--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <header class="header-container">
       <nav class="nav-bar">
         <ul class="nav-ul">
-          <!-- GAEL-SRC.GITHUB.IO -->
-          <a class="gael-src-link" href="https://gael-src.github.io/"
-            >gael-src.github.io</a
-          >
           <li class="nav-li"><a class="nav-a" href="table.html">Tables</a></li>
           <li class="nav-li"><a class="nav-a" href="#">Item 2</a></li>
           <li class="nav-li"><a class="nav-a" href="#">Item 3</a></li>
@@ -114,6 +110,7 @@
     </footer>
     <div class="gael-src-link-wrapper">
       <!-- GAEL-SRC.GITHUB.IO -->
+      <p>Code from:</p>
       <a class="gael-src-link" href="https://gael-src.github.io/"
         >gael-src.github.io</a
       >
